tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_admin_scope_list.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "admin_scope_list",
  "description": "Read-like admin: list persisted v2 scope definitions using read authorization from the server-resolved principal.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object"
  }
}
