tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_handoff.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "handoff",
  "description": "Validate handoff candidate memories. candidates items may be string content shorthand or full objects; caps at max_batch_size; scope accepts key/alias/matcher/context_hints; previews by default and persists only when commit=true.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "HandoffCandidateItem": {
        "description": "One candidate item accepted by the `handoff` tool.",
        "anyOf": [
          {
            "description": "String shorthand for candidate memory content.",
            "type": "string"
          },
          {
            "description": "Full structured handoff candidate.",
            "$ref": "#/$defs/HandoffCandidate"
          }
        ]
      },
      "HandoffCandidate": {
        "description": "Candidate memory supplied to `handoff`.",
        "type": "object",
        "properties": {
          "content": {
            "description": "Candidate memory content.",
            "type": "string"
          },
          "summary": {
            "description": "Optional compact summary.",
            "type": "string"
          },
          "context": {
            "description": "Governed multi-context selection for this candidate.",
            "$ref": "#/$defs/ContextEnvelope"
          },
          "scope": {
            "description": "Optional target scope: registered scope key, alias, or value containing a registered matcher.",
            "type": "string"
          },
          "context_hints": {
            "description": "Optional context hints matched against registered scope matchers when `scope` is omitted.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "tags": {
            "description": "Candidate tags.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "entities": {
            "description": "Candidate entities: each item may be a string name shorthand or a full `{name, type}` object.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/EntityInputItem"
            }
          },
          "memory_type": {
            "description": "Candidate memory type.",
            "$ref": "#/$defs/MemoryType"
          }
        },
        "required": [
          "content"
        ]
      },
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "EntityInputItem": {
        "description": "One request entity accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand for an entity name; the entity type defaults to `unknown`.",
            "type": "string"
          },
          {
            "description": "Full object with explicit `name` and `type`.",
            "$ref": "#/$defs/Entity"
          }
        ]
      },
      "Entity": {
        "description": "A caller-provided typed entity attached to a memory for entity-based retrieval.",
        "type": "object",
        "properties": {
          "name": {
            "description": "The entity name (e.g., \"Alice\", \"example-agent\", \"RFC 9110\").",
            "type": "string"
          },
          "type": {
            "description": "The entity type (e.g., \"person\", \"project\", \"document\").",
            "type": "string"
          }
        },
        "required": [
          "name",
          "type"
        ]
      },
      "MemoryType": {
        "description": "Classifies the kind of knowledge a memory captures.",
        "oneOf": [
          {
            "description": "Facts, definitions, or general knowledge.",
            "type": "string",
            "const": "semantic"
          },
          {
            "description": "Events that happened at a specific time.",
            "type": "string",
            "const": "episodic"
          },
          {
            "description": "Step-by-step instructions or how-tos.",
            "type": "string",
            "const": "procedural"
          }
        ]
      }
    },
    "required": [
      "candidates"
    ],
    "type": "object",
    "properties": {
      "candidates": {
        "description": "Candidate memories to validate. Each item may be a string content shorthand or a full candidate object. Length is capped by `limits.max_batch_size`.",
        "type": "array",
        "items": {
          "$ref": "#/$defs/HandoffCandidateItem"
        }
      },
      "commit": {
        "description": "Persist validated candidates when true. Defaults to preview-only.",
        "type": "boolean",
        "default": false
      }
    }
  }
}
