tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_read.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "read",
  "description": "Read one full memory by id. Trusted principals record a meaningful read activity event only for full-access reads; redacted and anonymous public reads do not.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "MemoryId": {
        "description": "A ULID-formatted unique memory identifier",
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object",
    "properties": {
      "id": {
        "description": "The memory ID to retrieve.",
        "$ref": "#/$defs/MemoryId"
      }
    }
  }
}
