tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_read_many.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "read_many",
  "description": "Read multiple full memories by id. Preserves input order, returns per-item not_found for missing/unreadable IDs, caps at max_batch_size, and records one read activity event only for full-access items read by trusted principals.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "MemoryId": {
        "description": "A ULID-formatted unique memory identifier",
        "type": "string"
      }
    },
    "required": [
      "ids"
    ],
    "type": "object",
    "properties": {
      "ids": {
        "description": "Memory IDs to retrieve. Order is preserved; missing or unreadable IDs return per-item `not_found`; batch size is capped by `limits.max_batch_size`.",
        "type": "array",
        "items": {
          "$ref": "#/$defs/MemoryId"
        }
      }
    }
  }
}
